--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     姓名:廖朝楷<br>
     學號:1110932032<br>
     <hr>
-    <a href="hw01.html">作業一</a>
-	<a href="hw02.html">作業一</a>
+    <td href="hw01.html">作業一</td>
+    <td> href="hw02.html">作業一</td>
 </body>
 </html>
