--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     學號:1110932032<br>
     <hr>
     <td href="hw01.html">作業一</td>
-    <td> href="hw02.html">作業一</td>
+     <td> href="hw02.html">作業二</td>
 </body>
 </html>
