--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <hr>
     <a href="hw01.html">作業一</a><br>
 	<a href="hw02.html">作業二</a>
-	<a href="hw03.html">作業二</a>
+	<a href="hw03.html">作業三</a>
 </body>
 </html>
