--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     姓名:廖朝楷<br>
     學號:1110932032<br>
     <hr>
-    <a href="hw01.html">作業一</a><br>
-	<a href="hw02.html">作業二</a><br>
-	<a href="hw03.html">作業三</a>
+    <button><a href="hw01.html">作業一</a><br></button>
+	<button><a href="hw02.html">作業二</a><br>/<button>
+	<button><a href="hw03.html">作業三</a></button>
 </body>
 </html>
