--- a/hw01.html
+++ b/hw01.html
@@ -6,7 +6,7 @@
 	<title>作業一</title>
 </head>
 <body>
-    <center></center><a href="index.html">回首頁</a>
+    <center><a href="index.html">回首頁</a>
     <hr>
     <table border="1" align="center" cellpadding="5"width="300px">
         <tr>
