--- a/hw03.html
+++ b/hw03.html
@@ -74,7 +74,7 @@
 </style>
 </head>
 <body>
-    <center></center><a href="index.html">回首頁</a>
+    <center><a href="index.html">回首頁</a>
     <hr>
 <div id="header">
 </div>
