--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <hr>
     <button><a href="hw01.html">作業一</a><br></button>
 	<button><a href="hw02.html">作業二</a><br></button>
-	<button><a href="hw03.html">作業三</a></button>
+	<button><a href="hw03.html">作業三</a><br></button>
+	<button><a href="期中報告.html">期中專題</a></button>
 </body>
 </html>
