--- a/期中報告.html
+++ b/期中報告.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>首頁</center><hr>
-    <button><a href="iphone6.html">IPhone6介紹</a><br></button>
+    <button><a href="Iphone6.html">IPhone6介紹</a><br></button>
     <button><a href="iphone13.html">IPhone13介紹</a><br></button>
     <button><a href="二者比較.html">二者比較</a><br></button>
 </html>
