--- a/期中報告.html
+++ b/期中報告.html
@@ -10,5 +10,5 @@
     <button><a href="Iphone6.html">IPhone6介紹</a><br></button>
     <button><a href="iphone13.html">IPhone13介紹</a><br></button>
     <button><a href="二者比較.html">二者比較</a><br></button>
-    <button><a href="IPHONE6、IPHONE13 的比較.pptx">二者比較</a><br></button>
+    <button><a href="IPHONE6、IPHONE13 的比較.pptx">PPT大綱</a><br></button>
 </html>
