--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 </head>
 <body>
-	<button><a href="pornhub.com">一中美食</a><br></button>
+	<button><a href="https://cn.pornhub.com">一中美食</a><br></button>
 	
 </body>
 </html>
