--- a/99乘法.html
+++ b/99乘法.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>99成法表2</title>
+	<title>99乘法2</title>
 </head>
 <body>
 	<center><a href="index.html">回首頁</a>
