--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 	<button><a href="hw03.html">作業三</a><br></button>
 	<button><a href="期中報告.html">期中專題</a></button>
 	<button><a href="99乘法.html">99乘法2</a></button>
+	<button><a href="期末專題.html">期末專題</a></button>
 </body>
 </html>
