--- a/期末專題.html
+++ b/期末專題.html
@@ -7,26 +7,27 @@
 </head>
 <center>
 <body>
-	<b style="font-size: 90px;">期末專題</b><hr><br>
-	<a href="13pm.html">IPhone 13 pro max</a><br>
-	<a href="13pro.html">IPhone 13 pro</a><br>
-	<a href="13m.html">IPhone 13 mini</a><br>
-	<a href="13.html">IPhone 13</a><br>
-	<a href="12pm.html">IPhone 12 pro max</a><br>
-	<a href="12pro.html">IPhone 12 pro</a><br>
-	<a href="12.html">IPhone 12</a><br>
-	<a href="12m.html">IPhone 12 mini</a><br>
-	<a href="11pm.html">IPhone 11 pro max</a><br>
-	<a href="11pro.html">IPhone 11 pro </a><br>
-	<a href="11.html">IPhone 11</a><br>
-	<a href="xsmax.html">IPhone Xs max</a><br>
-	<a href="xs.html">IPhone Xs</a><br>
-	<a href="x.html">IPhone X</a><br>
-	<a href="xr.html">IPhone XR</a><br>
-	<a href="8plus.html">IPhone8 Plus</a><br>
-	<a href="8.html">IPhone8</a><br>
-    <a href="se.html">IPhone SE(第一代)</a><br>
-	<a href="se2.html">IPhone SE(第二代)</a><br>
+	<button><b style="font-size: 90px;">期末專題</b><hr><br></button>
+	<button><a href="13pm.html">IPhone 13 pro max</a><br></button>
+	<button><a href="13pro.html">IPhone 13 pro</a><br></button>
+	<button><a href="13m.html">IPhone 13 mini</a><br></button>
+	<button><a href="13.html">IPhone 13</a><br></button>
+	<button><a href="12pm.html">IPhone 12 pro max</a><br></button>
+	<button><a href="12pro.html">IPhone 12 pro</a><br></button>
+	<button><a href="12.html">IPhone 12</a><br></button>
+	<button><a href="12m.html">IPhone 12 mini</a><br></button>
+	<button><a href="11pm.html">IPhone 11 pro max</a><br></button>
+	<button><a href="11pro.html">IPhone 11 pro </a><br></button>
+	<button><a href="11.html">IPhone 11</a><br></button>
+	<button><a href="xsmax.html">IPhone Xs max</a><br></button>
+	<button><a href="xs.html">IPhone Xs</a><br></button>
+	<button><a href="x.html">IPhone X</a><br></button>
+	<button><a href="xr.html">IPhone XR</a><br></button>
+	<button><a href="8plus.html">IPhone8 Plus</a><br></button>
+	<button><a href="8.html">IPhone8</a><br></button>
+   	<button><a href="se.html">IPhone SE(第一代)</a><br></button>
+	<button><a href="se2.html">IPhone SE(第二代)</a><br></button>
+	<button><a href="IPHONE8、IPHONE13 的比較期中考(1).pptx">PPT</a><br></button>
     </body>
     </center>
 </html>
