--- a/期末專題.html
+++ b/期末專題.html
@@ -3,31 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>首頁</title>
+	<title>期末</title>
 </head>
-<center>
+<body style="background:#C0C0C0;">
 <body>
-	<b style="font-size: 90px;">期末專題</b><hr>
-	<br><button><a href="13pm.html">IPhone 13 pro max</a>
-	<br><button><a href="13pro.html">IPhone 13 pro</a>
-	<br><button><a href="13m.html">IPhone 13 mini</a>
-	<br><button><a href="13.html">IPhone 13</a>
-	<br><button><a href="12pm.html">IPhone 12 pro max</a>
-	<br><button><a href="12pro.html">IPhone 12 pro</a>
-	<br><button><a href="12.html">IPhone 12</a>
-	<br><button><a href="12m.html">IPhone 12 mini</a>
-	<br><button><a href="11pm.html">IPhone 11 pro max</a>
-	<br><button><a href="11pro.html">IPhone 11 pro </a>
-	<br><button><a href="11.html">IPhone 11</a>
-	<br><button><a href="xsmax.html">IPhone Xs max</a>
-	<br><button><a href="xs.html">IPhone Xs</a>
-	<br><button><a href="x.html">IPhone X</a>
-	<br><button><a href="xr.html">IPhone XR</a>
-	<br><button><a href="8plus.html">IPhone8 Plus</a>
-	<br><button><a href="8.html">IPhone8</a>
-   	<br><button><a href="se.html">IPhone SE(第一代)</a>
-	<br><button><a href="se2.html">IPhone SE(第二代)</a>
-	<br><button><a href="IPHONE8、IPHONE13 的比較期中考(1).pptx">PPT</a>
-    </body>
+	<marquee direction="up"><b style="font-size: 90px;">期末專題</b></marquee>
+	<center>
+	<br><button><a href="13pm.html">IPhone 13 pro max</a></button>
+	<br><button><a href="13pro.html">IPhone 13 pro</a></button>
+	<br><button><a href="13m.html">IPhone 13 mini</a></button>
+	<br><button><a href="13.html">IPhone 13</a></button>
+	<br><button><a href="12pm.html">IPhone 12 pro max</a></button>
+	<br><button><a href="12pro.html">IPhone 12 pro</a></button>
+	<br><button><a href="12.html">IPhone 12</a></button>
+	<br><button><a href="12m.html">IPhone 12 mini</a></button>
+	<br><button><a href="11pm.html">IPhone 11 pro max</a></button>
+	<br><button><a href="11pro.html">IPhone 11 pro </a></button>
+	<br><button><a href="11.html">IPhone 11</a></button>
+	<br><button><a href="xsmax.html">IPhone Xs max</a></button>
+	<br><button><a href="xs.html">IPhone Xs</a></button>
+	<br><button><a href="x.html">IPhone X</a></button>
+	<br><button><a href="xr.html">IPhone XR</a></button>
+	<br><button><a href="8plus.html">IPhone8 Plus</a></button>
+	<br><button><a href="8.html">IPhone8</a></button>
+   	<br><button><a href="se.html">IPhone SE(第一代)</a></button>
+	<br><button><a href="se2.html">IPhone SE(第二代)</a></button>
+	<br><button><a href="IPHONE8、IPHONE13 的比較期中考(1).pptx">PPT</a></button>
+	<br><marquee direction="down" width="100" height="100" behavior="alternate" style="border:solid">
+  	<marquee behavior="alternate">
+    <br><button><a href="index.html">回首頁</a></button>
     </center>
+    </body>
 </html>
