--- a/期末專題.html
+++ b/期末專題.html
@@ -6,9 +6,9 @@
 	<title>期末</title>
 </head>
 <body style="background:#C0C0C0;">
-<body>
 	<marquee direction="up"><b style="font-size: 90px;">期末專題</b></marquee>
-	<center>
+	<div id="sideba_right"><iframe width="560" height="315" src="https://www.youtube.com/embed/XKfgdkcIUxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+	<div id ="content">
 	<br><button><a href="13pm.html">IPhone 13 pro max</a></button>
 	<br><button><a href="13pro.html">IPhone 13 pro</a></button>
 	<br><button><a href="13m.html">IPhone 13 mini</a></button>
@@ -31,7 +31,7 @@
 	<br><button><a href="IPHONE8、IPHONE13 的比較期中考(1).pptx">PPT</a></button>
 	<br><marquee direction="down" width="100" height="100" behavior="alternate" style="border:solid">
   	<marquee behavior="alternate">
-    <br><button><a href="index.html">回首頁</a></button>
-    </center>
+    <br><button><a href="index.html">回首頁</a></button></marquee>
+    </div>
     </body>
 </html>
